[tool.poetry]
name = "nd608-project-build-your-own-custom-chatbot"
version = "0.1.0"
description = ""
authors = ["Agustin Barto <abarto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.14.3"
jupyter = "^1.0.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
